--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <audio id="bg-music" loop>
-        <source src="song.mp3" type="audio/mpeg">
+        <source src="Song.mp3" type="audio/mpeg">
     </audio>
     <button id="music-btn" onclick="toggleMusic()">🔊</button>
 
