--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Section-Specific Image Border -->
     <div class="image-border">
-        <img src="intro.jpg" id="section-image" class="border-img">
+        <img src="IMG_7933.PNG" id="section-image" class="border-img">
     </div>
 
     <div class="container">
